# esp32-pendrive-s3-wifi-dongle-master

./: README.md  sdkconfig  sdkconfig.old
components/tinyusb_dongle/: CMakeLists.txt  tinyusb.c
main/: CMakeLists.txt  cmd_wifi.c  cmd_wifi.h  idf_component.yml  usb_dongle_main.c
test/: sdkconfig
test/components/tinyusb_dongle/: CMakeLists.txt
test/main/: uart.h  usb_dongle_main.c
